--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -17,8 +17,9 @@ form select {
 form button {
   display: block;
   width: 100%;
-  padding: 5px;
+  padding: 8px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   outline: none;
   background-color: rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
